infra/k8s/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: jayabrata180/auth
          resources:
            limits:
              cpu: "500m"  # 500 milliCPU (0.5 CPU core)
              memory: "512Mi"  # 512 Mebibytes
            requests:
              cpu: "200m"  # 200 milliCPU (0.2 CPU core)
              memory: "256Mi"  # 256 Mebibytes
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
